# rust-canteen

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
canteen-impl/: Cargo.toml
canteen-impl/src/: main.rs
first/: Cargo.toml
first/src/: main.rs  tests.rs
rust-canteen/: Cargo.toml
rust-canteen/src/: lib.rs  main.rs  request.rs  response.rs  route.rs  tests.rs
src/: lib.rs  request.rs  response.rs  route.rs  tests.rs  utils.rs
src/context/: mod.rs  pool_postgres.rs
tests/: integration_test.rs
