[package]
name = "canteen"
version = "0.3.3"
authors = ["Jeff Nettleton <jeffdn@gmail.com>"]

description = "A Flask-like microframework for Rust"
repository = "https://gitlab.com/jeffdn/rust-canteen"
documentation = "https://docs.rs/canteen/"
readme = "README.md"
license = "MIT"

exclude = [
    '.gitlab-ci.yml',
]

[dependencies]
chrono = "0.2"
regex = "0.1"
mio = "0.5"
rustc-serialize = "0.3"
threadpool = "1.0"
