[package]
name = "canteen"
version = "0.5.1"
authors = ["Jeff Nettleton <jeffdn@gmail.com>"]

description = "A Flask-like microframework for Rust"
repository = "https://gitlab.com/jeffdn/rust-canteen"
documentation = "https://docs.rs/canteen/"
readme = "README.md"
license = "MIT"

include = [
    'src/*',
    'Cargo.toml',
    'README.md',
    'LICENSE'
]

[dependencies]
chrono = "0.4"
regex = "0.2"
mio = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
threadpool = "1.0"
