[package]
name = "canteen"
version = "0.5.5"
authors = ["Jeff Nettleton <jeffdn@gmail.com>"]
edition = "2018"

description = "A Flask-like microframework for Rust"
repository = "https://gitlab.com/jeffdn/rust-canteen"
documentation = "https://docs.rs/canteen/"
readme = "README.md"
license = "MIT"

include = [
    "src/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
chrono = "0.4"
regex = "1.0"
mio = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
threadpool = "1.0"
mime_guess = "2.0"
